browser/app/profile/firefox.js
@@ -1186,9 +1186,7 @@ pref("browser.tabs.remote.autostart", false);
 // This will probably require a restart.
 pref("browser.tabs.remote.sandbox", "off");
 
-// This is essentially the same logic that decides whether nsStackWalk.cpp gets
-// built, which we use for the stack trace. See xpcom/base/moz.build
-#if !defined(MOZ_OPTIMIZE) || defined(MOZ_PROFILING) || defined(DEBUG)
+#if defined(MOZ_STACKWALKING)
 // This controls the depth of stack trace that is logged when the warn only
 // sandbox reports that a resource access request has been blocked.
 // This does not require a restart to take effect.
